--- a/kagami.html
+++ b/kagami.html
@@ -54,14 +54,14 @@ img{
                                  <li>(3)効果の検証・制作物の分析について
                             </ul>
              <h3>Ⅱ　仮説<a href ="https://tkby.github.io/micra.github.io/kasetsu.html">→</a></h3>
-             <h3>Ⅲ　研究の方法と内容<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
+             <h3>Ⅲ　研究の方法と内容</h3>
              <h3>Ⅲ-1 プログラミング活動について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
                   <ul>
-                      <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                      <li>(2)検証授業(第１回～４回）<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                      <li>(3)検証方法<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                      <li>(1)実態調査１・２の対象と期間
+                      <li>(2)検証授業(第１回～４回）
+                      <li>(3)検証方法
                          <ul>
-                             <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                             <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/johokatsuyoucheck.html">→</a>
                              <li>②例題プログラム<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                              <li>③応用テスト<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                              <li>④プログラミングスキルチェック<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
