--- a/inyosanko.html
+++ b/inyosanko.html
@@ -21,19 +21,22 @@
    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
             　<th width="15%"><b>種別</b></th>
+           　 <th width="15%"><b>出版社等</b></th>
               <th width="30%"><b>著者</b></th>
-              <th width="45%"><b>タイトル</b></th>
+              <th width="30%"><b>タイトル</b></th>
            　 <th width="10%"><b>年</b></th>
             </tr>
   
  
     <tr>
    <td>引用文献</td>
+     <td></td>
    <td>文部科学省</td>
    <td>小学校学習指導要領総則　第1章第２の２の(1)</td>
    <td>平成29年３月</td>
   </tr>
   <tr>
+   <td></td>
    <td></td>
    <td>文部科学省</td>
    <td>次世代の教育推進課事業（情報教育の推進等に関する調査研究）成果報告書　情報活用能力を育成するためのカリキュラム・マネジメントの在り方と授業デザイン p15</td>
@@ -42,17 +45,20 @@
   
    <tr>
    <td></td>
+    <td></td>
    <td>東京学芸大学　教育講座　高橋　純　研究室</td>
    <td>情報活用能力チェックリスト</td>
    <td></td>
     </tr>
     <tr>
+     <td></td>
    <td>さくら社</td>
    <td>木村明憲（著）　黒上晴夫・堀田龍也（監修）</td>
    <td>単元縦断×教科横断　主体的な学びを引き出す９つのステップ</td>
    <td>2020年</td>
   </tr>
     <tr>
+     <td></td>
    <td>図書文化社</td>
    <td>John Hattie</td>
    <td>教育の効果　メタ分析による学力に影響を与える要因の効果の可視化</td>
@@ -61,6 +67,7 @@
   
     <tr>
    <td>参考文献</td>
+     <td></td>
    <td>水本　篤　竹内　理</td>
    <td>研究論文における効果量の報告のために-基礎的概念と注意点-</td>
    <td>2008年</td>
@@ -68,30 +75,35 @@
     <tr>
    <td></td>
    <td>山口　禎恵</td>
+     <td></td>
    <td>Minecraft　Education Editionを活用した授業【自立活動】</td>
    <td>2017年</td>
   </tr>
     <tr>
    <td></td>
    <td>川手くるみ　尾崎剛　広瀬啓雄</td>
+     <td></td>
    <td>論理的思考力を重視した初等中等教育におけるプログラミング教育</td>
    <td>2018年</td>
   </tr>
     <tr>
    <td></td>
    <td>渡辺勇士</td>
+     <td></td>
    <td>未就学児を対象としたプログラミング教育に関する研究</td>
    <td>2021年３月</td>
   </tr>
     <tr>
    <td></td>
    <td>石井康夫　大久保あかね　鈴木大介</td>
+     <td></td>
    <td>商店街における来街者のイメージ調査に関する比較研究-静岡県富士市における事例-</td>
    <td>2021年３月</td>
   </tr>
     <tr>
    <td></td>
    <td>室真紀子</td>
+     <td></td>
    <td>話し合う力の変容を時間できる生徒の育成-振り返りの分析を通して-</td>
    <td>2021年3月</td>
   </tr> 
