--- a/kagami.html
+++ b/kagami.html
@@ -105,10 +105,10 @@ img{
                           <li>②SD法によるプロフィールを活用した振り返り<a href ="">→</a>
                           <li>③作文による振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                       </ul>
-            <h3>Ⅵ　まとめ<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
+            <h3>Ⅵ　まとめ<a href ="https://tkby.github.io/micra.github.io/matome.html">→</a></h3>
                        <ul>
-                          <li>1 成果<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                          <li>2 課題<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                          <li>1 成果
+                          <li>2 課題
                        </ul>
             <h3>注釈及び引用・参考文献<a href ="https://tkby.github.io/micra.github.io/inyosanko.html">→</a></h3>
          </li>
