--- a/matome.html
+++ b/matome.html
@@ -16,9 +16,11 @@
  <body>
    
  <ul class="box-list" style="list-style:none;">
-  <li>
-   <h1>Ⅱ　仮説</h1>
-    <p>「評価・改善する『情報活用能力』」を育むため，ICT活用時の振り返り活動を効果的に取り入れた授業を行うことで，自ら評価・改善をして適切な情報活用ができる児童が育つであろう。</p>
+     <li>
+        <h1>Ⅵ　研究のまとめ</h1>
+         <ul><li>１　成果
+    　       <li>２　課題
+         </ul>
     </li>
  </ul>
 
