--- a/kagami.html
+++ b/kagami.html
@@ -100,12 +100,12 @@ img{
            <h3>Ⅴ-2 考察<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
                       <ul>
                           <li>(1)「評価・改善する『情報活用能力』の高まり<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                          <li>(2)有効だった振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a><ul>
+                          <li>(2)有効だった振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                           <li>①パフォーマンス評価による振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                           <li>②SD法によるプロフィールを活用した振り返り<a href ="">→</a>
                           <li>③作文による振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                       </ul>
-            <h3>Ⅵ　まとめ<a href ="https://tkby.github.io/micra.github.io/matome.html">→</a></h3>
+           <h3>Ⅵ　まとめ<a href ="https://tkby.github.io/micra.github.io/matome.html">→</a></h3>
                        <ul>
                           <li>1 成果
                           <li>2 課題
