--- a/kagami.html
+++ b/kagami.html
@@ -76,7 +76,7 @@ img{
                        <li>(4)プログラミングスキルチェックより<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                        <li>(5)授業観察・制作物より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                    </ul>
-             <h3>Ⅴ-1　考察<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
+             <h3>Ⅴ-1　考察<a href ="https://tkby.github.io/micra.github.io/prograkosatsu.html">→</a></h3>
                      <ul>
                         <li>(1)「評価・改善する『情報活用能力』」のたかまり<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                         <li>(2)「随時振り返り」と「総括振り返り」の違い<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
@@ -97,7 +97,7 @@ img{
                          <li>(2)商店街と制作物のプロフィールによる振り返りより<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                          <li>(3)児童の記述より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                       </ul>
-           <h3>Ⅴ-2 考察<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
+           <h3>Ⅴ-2 考察<a href ="https://tkby.github.io/micra.github.io/micrakosatsu.html">→</a></h3>
                       <ul>
                           <li>(1)「評価・改善する『情報活用能力』の高まり<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                           <li>(2)有効だった振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
