--- a/kagami.html
+++ b/kagami.html
@@ -56,6 +56,7 @@ img{
              <h3>Ⅱ　仮説<a href ="https://tkby.github.io/micra.github.io/kasetsu.html">→</a></h3>
              <h3>Ⅲ　研究の方法と内容</h3>
              <h3>Ⅲ-1 プログラミング活動について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
+   <p>活動の概要説明<a href="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></p>
                   <ul>
                       <li>(1)実態調査１・２の対象と期間
                       <li>(2)検証授業(第１回～４回）
@@ -81,7 +82,8 @@ img{
                         <li>(1)「評価・改善する『情報活用能力』」のたかまり<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                         <li>(2)「随時振り返り」と「総括振り返り」の違い<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
            　　　　　 </ul>
-           <h3>Ⅲ-2 地域の祭りをデジタルで表現する活動について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
+           <h3>Ⅲ-2 地域の祭りをデジタルで表現する活動について</h3>
+           <p>活動の概要説明<a href="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></p>
                      <ul>
                         <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                         <li>(2)検証授業（第１回～３回）<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
