--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -192,11 +192,8 @@
     </body>
    <footer>
 <nav>
-<button type="button" onclick="location.href='https://tkby.github.io/Learning-by-Viscuit.github.io/kokugo/kokugo.html'">国語トップへ</button>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
 </nav>
-<small>© 2021 CoderDojo Handa,Created by Yoshinori Takebayashi</small>
-    <p class="CC">
-      <img src= "https://tkby.github.io/Learning-by-Viscuit.github.io/hyouji-hieiri-keisho.png" alt="　CC画像">
-      </p>
-</footer>
+<small>© 2021 Created by Yoshinori Takebayashi</small>
+   </footer>
   </html>
