--- a/micrakosatsu.html
+++ b/micrakosatsu.html
@@ -19,7 +19,8 @@
   <li>
    <h1>Ⅴ-2 考察</h1>
     <p>「評価・改善する『情報活用能力』」を育むため，ICT活用時の振り返り活動を効果的に取り入れた授業を行うことで，自ら評価・改善をして適切な情報活用ができる児童が育つであろう。</p>
-    </li>
+   <ul>児童の振替り作文より<li>私は，この活動をして，○○市（特に△△大路）について興味がわきました。今までマインクラフトをゲームだと思っていたけど，建物を建てるうち，〇〇市全体に興味を持つことができるんだと考え方が変わりました。私の作業が進んでいなかったとき，〇〇君と□□君が，率先して手伝いに来てくれて，話や作業も盛り上がったし，何よりありがたかったです。こうやって友達のやさしさが見える活動はよいなと思いました。楽しい授業の中で「大人と子供は感じ方がちがう」と学んだので，これから〇〇市以外の行事でも，このことが活かせたらいいなと思います。楽しさもあり，○○市のことを学べるこの授業を受けて，本当に良かったです。<li>５月から11月の間，マインクラフトの学習をして〇〇市の△△祭りの良さが分かった。工夫したところは，友達のアドバイスを聞いて，ピストンを使って服をショーケースに入れたりしたことです。できるようになったことは，他の人とコミュニケーションがとれるようになりました。今までは他の人に，話しかけることがあまりできなかったからです。友達とのやり取りはできたと思います。友達にアドバイスしたりアドバイスされたりしたからです。<li>ぼくは，この授業で，順序を決めてものごとを進めることができるようになりました。マインクラフトでは，ブロックを置く順番を考えないとできなくなることがあるからです。そして，工夫したところは，店内にたなを作ってみそやしょうゆっぽいものをかざって，できるだけ本物に近づけました。〇〇さんもおわったら手伝ってくれで，ぼくも□□醤油のお店を手伝いました。協力してリアルなものができたので楽しかったです。 <li>はじめは，なんにもなかった町？町ともいえないようなすっからかんな所でしたが，５，６年生の力で，今は，みりょくあふれる○○大路の町だと思います。これを夜にして，キャンドルの緑を飾ったら，きれいに光ってみえるんだろうなあ。全部完成したかはわかりませんが，けっこう町っぽくなっているので，できていないところがあっても問題はあまりないと思います。次は，○○祭りみたいに明るくされるんだ。そうだ，ていあんですけど，花火をやったらどうでしょう。レバーと花火，レッドストーン，発射そうちを使って…。</ul>
+  </li>
  </ul>
 
     </body>
