--- a/kagami.html
+++ b/kagami.html
@@ -105,7 +105,7 @@ img{
                           <li>(2)有効だった振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                           <li>①パフォーマンス評価による振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                           <li>②SD法によるプロフィールを活用した振り返り<a href ="">→</a>
-                          <li>③作文による振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                          <li>③作文による振り返り<a href ="https://tkby.github.io/micra.github.io/.html">→</a>
                       </ul>
            <h3>Ⅵ　まとめ<a href ="https://tkby.github.io/micra.github.io/matome.html">→</a></h3>
                        <ul>
