--- a/performance.html
+++ b/performance.html
@@ -18,7 +18,13 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>①パフォーマンス評価による振り返り</h1>
-      </li>
+     <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+           <tr align="center">
+             <th width="15%"><b>時期</b></th>
+             <th width="30%"><b>活動</b></th>
+             <th width="55%"><b>詳細について</b></th>
+           </tr>
+  </li>
  </ul>
 
     </body>
