--- a/kagami.html
+++ b/kagami.html
@@ -103,7 +103,7 @@ img{
                       <ul>
                           <li>(1)「評価・改善する『情報活用能力』の高まり<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                           <li>(2)有効だった振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                          <li>①パフォーマンス評価による振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                          <li>①パフォーマンス評価による振り返り<a href ="https://tkby.github.io/micra.github.io/performance.html">→</a>
                           <li>②SD法によるプロフィールを活用した振り返り<a href ="">→</a>
                           <li>③作文による振り返り<a href ="https://tkby.github.io/micra.github.io/micrakosatsu.html">→</a>
                       </ul>
