--- a/performance.html
+++ b/performance.html
@@ -18,11 +18,9 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>①パフォーマンス評価による振り返り</h1>
-     <table border="1"cellspacing="0" bordercolor="#333" width="100%">
-           <tr align="center">
-             <th width="15%"><b>時期</b></th>
-             <th width="30%"><b>活動</b></th>
-             <th width="55%"><b>詳細について</b></th>
+   <div><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="90%"></div>
+  
+     
            </tr>
   </li>
  </ul>
