--- a/kagami.html
+++ b/kagami.html
@@ -102,7 +102,7 @@ img{
            <h3>Ⅴ-2 考察<a href ="https://tkby.github.io/micra.github.io/micrakosatsu.html">→</a></h3>
                       <ul>
                           <li>(1)「評価・改善する『情報活用能力』の高まり<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                          <li>(2)有効だった振り返り<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                          <li>(2)有効だった振り返り
                           <li>①パフォーマンス評価による振り返り<a href ="https://tkby.github.io/micra.github.io/performance.html">→</a>
                           <li>②SD法によるプロフィールを活用した振り返り<a href ="">→</a>
                           <li>③作文による振り返り<a href ="https://tkby.github.io/micra.github.io/micrakosatsu.html">→</a>
