--- a/kagami.html
+++ b/kagami.html
@@ -62,7 +62,7 @@ img{
                       <li>(2)検証授業(第１回～４回）
                       <li>(3)検証方法
                          <ul>
-                             <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/johokatsuyoucheck.html">→</a>
+                             <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">→</a>
                              <li>②例題プログラム<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                              <li>③応用テスト<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                              <li>④プログラミングスキルチェック<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
@@ -71,7 +71,7 @@ img{
                   </ul>
              <h3>Ⅳ-1 結果<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
                    <ul>
-                       <li>(1)情報活用能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                       <li>(1)情報活用能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">→</a>
                        <li>(2)例題とプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                        <li>(3)応用テストプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                        <li>(4)プログラミングスキルチェックより<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
