--- a/micrakaizen.html
+++ b/micrakaizen.html
@@ -18,8 +18,20 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>SD法によるプロフィールを活用した振り返り</h1>
-   <div><img src="https://tkby.github.io/micra.github.io/.jpg" alt="マイクラ完成図路上" width="90%"></div>
- 
+    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+           <tr align="center">
+             <th width="50%"><b>改善前</b></th>
+             <th width="50%"><b>改善後</b></th>
+                    </tr>
+     <tr>
+      <td><img src="https://tkby.github.io/micra.github.io/before1.jpg" alt="マイクラ事前１" width="90%"></td>
+      <td><img src="https://tkby.github.io/micra.github.io/after1" alt="マイクラ事後１" width="90%"></td>
+     </tr>
+       <tr>
+      <td><img src="https://tkby.github.io/micra.github.io/before2.jpg" alt="マイクラ事前２" width="90%"></td>
+      <td><img src="https://tkby.github.io/micra.github.io/after2.jpg" alt="マイクラ事後２" width="90%"></td>
+     </tr>
+      </table>
       </li>
  </ul>
 
