--- a/micrakaizen.html
+++ b/micrakaizen.html
@@ -25,7 +25,7 @@
                     </tr>
      <tr>
       <td><img src="https://tkby.github.io/micra.github.io/before1.jpg" alt="マイクラ事前１" width="90%"></td>
-      <td><img src="https://tkby.github.io/micra.github.io/after1" alt="マイクラ事後１" width="90%"></td>
+      <td><img src="https://tkby.github.io/micra.github.io/after1.jpg" alt="マイクラ事後１" width="90%"></td>
      </tr>
        <tr>
       <td><img src="https://tkby.github.io/micra.github.io/before2.jpg" alt="マイクラ事前２" width="90%"></td>
