--- a/micrakaizen.html
+++ b/micrakaizen.html
@@ -18,12 +18,13 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>SD法によるプロフィールを活用した振り返り</h1>
+   <div>
     <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="50%"><b>改善前</b></th>
              <th width="50%"><b>改善後</b></th>
                     </tr>
-     <tr>
+     <tr><img src="https://tkby.github.io/micra.github.io/before1.jpg" alt="" width="90%">
       <td><img src="https://tkby.github.io/micra.github.io/before1.jpg" alt="マイクラ事前１" width="90%"></td>
       <td><img src="https://tkby.github.io/micra.github.io/after1.jpg" alt="マイクラ事後１" width="90%"></td>
      </tr>
