--- a/micrakaizen.html
+++ b/micrakaizen.html
@@ -24,7 +24,7 @@
              <th width="50%"><b>改善前</b></th>
              <th width="50%"><b>改善後</b></th>
                     </tr>
-     <tr><img src="https://tkby.github.io/micra.github.io/before1.jpg" alt="" width="90%">
+     <tr><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="90%">
       <td><img src="https://tkby.github.io/micra.github.io/before1.jpg" alt="マイクラ事前１" width="90%"></td>
       <td><img src="https://tkby.github.io/micra.github.io/after1.jpg" alt="マイクラ事後１" width="90%"></td>
      </tr>
