--- a/micrakaizen.html
+++ b/micrakaizen.html
@@ -18,7 +18,7 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>SD法によるプロフィールを活用した振り返り</h1>
-   <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="90%"></div>
+   <div><img src="https://tkby.github.io/micra.github.io/3dhaccho.jpg" alt="マイクラで作った商店街" width="90%"></div>
     <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="50%"><b>改善前</b></th>
