--- a/micrakaizen.html
+++ b/micrakaizen.html
@@ -18,7 +18,12 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>SD法によるプロフィールを活用した振り返り</h1>
+    <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="90%"></div>
    <div><img src="https://tkby.github.io/micra.github.io/3dhaccho.jpg" alt="マイクラで作った商店街" width="90%"></div>
+   <p>10月半ばの時点までの商店街の町並みについて，SD法によるアンケート（第５学年19名，第６学年21名，教員13名）でプロフィールを作成し，それぞれの結果を比較しました。教員によるプロフィールは「児童よりも商店街に詳しい『大人のプロフィール』」として扱いました。</p>
+   <p>すると，商店街の日常のプロフィールよりもマインクラフトで作った商店街のプロフィールの方が，児童と大人の捉え方が違うことが分かりました。</p>
+   <p>児童は，このギャップを「自分たちが制作物が商店街をうまく表現できていないことが原因ではないか？」と捉えました。その後，自分たちの制作物を振り返って評価し，よりよいものにするために改善を試みる姿が多く見られました。</p>
+   <p>SD法によるプロフィールを活用した振り返り後の，制作物の改善例</p>
     <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="50%"><b>改善前</b></th>
