--- a/kagami.html
+++ b/kagami.html
@@ -119,7 +119,7 @@ img{
 <nav>
 <button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップページ</button>
 </nav>
-  <small>© 2021 CoderDojo Handa,Created by Yoshinori Takebayashi</small>
+  <small>© 2021 Created by Yoshinori Takebayashi</small>
 
 </footer>
   
