--- a/senkokenkyu.html
+++ b/senkokenkyu.html
@@ -22,7 +22,7 @@
      <li>(1)ICT活用について<br><p>渡辺勇士(2020)は，キーボードの入力を必要としないビジュアルプログラミング言語ビスケットを使うことによって，未就学児は命令を理解し，適切にプログラミングを使った表現ができると示している。低学年からプログラミング教育に取り組む場合，未就学児から取り組めるビスケットを活用するのが最適であると考えた。</p>
      <li>(2)「評価・改善する『情報活用能力』について」<br><p>木村明憲は著書で，総合的な学習の時間での探究的な学びのプロセスを９ステップに分類し，育成できる情報活用能力を８つの力に分類している。本研究に関連する「評価・改善力」は９ステップの内，５つのステップを通して育成でき振り返りで発揮されるとしている。</p>
       <img src="https://tkby.github.io/micra.github.io/jochekekka.jpg" alt="" width="50%">
-          <img src="https://tkby.github.io/micra.github.io/IEschool.jpg" alt="IE-School" width="50%">
+          <img src="https://tkby.github.io/micra.github.io/IEschool2.jpg" alt="IE-School" width="50%">
       <img src="https://tkby.github.io/micra.github.io/kimurastep.jpg" alt="木村氏単元縦断型学習" width="50%">
       <img src="https://tkby.github.io/micra.github.io/kurage.jpg" alt="クラゲチャート" width="50%">
      
