--- a/senkokenkyu.html
+++ b/senkokenkyu.html
@@ -25,7 +25,7 @@
          <li>情報活用能力の体系的な整理（文科省）に照らすと，「問題解決・探究における情報を活用する力」の④「自らの情報活用を評価・改善する力」が弱いといえる。<br> <img src="https://tkby.github.io/micra.github.io/IEschool2.jpg" alt="IE-School" width="50%">
     
        　<li>木村明憲は著書で，総合的な学習の時間での探究的な学びのプロセスを９ステップに分類し，育成できる情報活用能力を８つの力に分類している。本研究に関連する「評価・改善力」はステップ③～⑨にあたる。 <br><li><img src="https://tkby.github.io/micra.github.io/kimurastep.jpg" alt="木村氏単元縦断型学習" width="50%">
-         <li>そこで，本研究ではステップ③～⑨で育成される力をまとめ，」５つに整理し直し，「評価・改善する情報活用能力」とした。<br><img src="https://tkby.github.io/micra.github.io/kurage.jpg" alt="クラゲチャート" width="50%">
+         <li>そこで，本研究ではステップ③～⑨で育成される力に「計画力」を加えて５つに整理し直し，まとめた力を「評価・改善する情報活用能力」とした。<br><img src="https://tkby.github.io/micra.github.io/kurage.jpg" alt="クラゲチャート" width="50%">
      
   
       <「単元縦断×教科横断　主体的な学びを引き出す９つのステップ（木村明憲著）」33pの図をもとに作成>
