--- a/kagami.html
+++ b/kagami.html
@@ -62,7 +62,7 @@ img{
                       <li>(2)検証授業(第１回～４回）
                       <li>(3)検証方法
                          <ul>
-                             <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">→</a>
+                             <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→</a>
                              <li>②例題プログラム<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                              <li>③応用テスト<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                              <li>④プログラミングスキルチェック<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
