--- a/kagami.html
+++ b/kagami.html
@@ -96,7 +96,7 @@ img{
                               <li>②授業観察・制作物・記述<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                            </ul>
                      </ul>
-           <h3>Ⅳ-2 結果<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
+           <h3>Ⅳ-2 結果<a href ="https://tkby.github.io/micra.github.io/micrajoche.html">→</a></h3>
                       <ul>
                          <li>(1)情報活用」能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">→</a>
                          <li>(2)商店街と制作物のプロフィールによる振り返りより<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
