--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -147,12 +147,12 @@
        <td>活動の説明に移ります。<br><b>１　目標提示</b><br><ul>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!<br><li>①目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!」を５月末に設定しました。</ul><li>②ルーブリックによるパフォーマンス評価を実施した意識づけ（5月末～７月中旬）<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
       </tr>
    <tr>
-    <td>ホスト機でのマルチプレイ（25人)設定コマンド入力画面<br><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
-    <td>活動がスタートすると，毎回の活動時にホスト機のPCでマルチプレイの設定が必要になりますので説明いたします。左の画像は25人に設定した場合です。<br><b>マルチプレイのコマンドについて(ホスト機のPCでの作業）</b><br><ul>ホスト機でマルチプレイの設定をします。同一のWiFiであれば，コマンドを入力することで，最大40人までマルチプレイができます。ホスト機のPCで設定をします。<li>入力方法<ul><li>PCの場合は「T」キーを押すとコマンド入力できます。<li>下部の歯車の横に「/setmaxplayers 数字」と入力すると,同一のWiFiであれば，数字の人数までマルチプレイができるようになります。<li>有効な数字は１以上４０以下です。<li>コマンドが入力できるのは「オペレーター」のみです。<li>本事例の場合，ワールドを作成しているホスト機のPCが「オペレーター」です。</ul><li>マルチプレイの通信環境について<ul>本事例では，学校の通信環境が時間帯によって不安定だったため，マインクラフトによる制作作業用に別途モバイルルーターでWifi環境を準備しました。</ul></ul></td> 
+    <td>ホスト機でのマルチプレイ設定コマンド入力</td>
+    <td>ワールドデータを作成しているホスト機側でマルチプレイのコマンドを入力する方法です。<a href = "https://tkby.github.io/micra.github.io/multiset.html>入力方法はこちら</a></td> 
   </tr>
   <tr>
-    <td>児童の制作用iPadでのマルチプレイ接続手順<br><img src="https://tkby.github.io/micra.github.io/multi1.jpg" alt="マルチプレイ1" width="100%"><br><img src="https://tkby.github.io/micra.github.io/multi2.jpg" alt="マルチプレイ2" width="100%"></td>
-    <td>ホスト機のPCにコマンドを打って，マルチプレイ人数が増えましたか？次は児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方を説明します。<br><b>マルチプレイの接続について（児童の制作用iPadでの作業）</b><ul>ホスト機のPCがワールドを立ち上げたのを確認して次の①～③の作業をします。<li>接続手順<ul><li>①児童の制作用iPadのアプリを開きます。<li>②左上画像上段中央の「フレンド」というタブの数字が0でないことを確認し，タップします。<li>③左下画像のようになりましたか？画像中央下の「LANゲーム」という記述より下に，参加可能なワールドが表示されていますので，入りたいワールドをタップするとマルチプレイの準備が完了です。</ul></ul></td>
+    <td>児童の制作用iPadでのマルチプレイ接続手順</td>
+    <td>ホスト機のPCにコマンドを打って，マルチプレイ人数が増えましたか？児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方の説明です。<a href = "https://tkby.github.io/micra.github.io/multiset2.html></td>
   </tr>
   
       <tr>
