--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -95,11 +95,11 @@
              <th width="60%"><b>内容</b></th>
            </tr>
       <tr>
-         <td>学習活動名</td>
+       <td>学習活動名</td>
        <td>「地域の祭りと商店街をデジタルで表現しよう」</td>
       </tr>
       <tr>
-         <td>学年</td>
+       <td>学年</td>
        <td><b>小学校高学年</b>（高校生位まで展開が可能)※本事例は，マインクラフトの経験率が約６割の小学校高学年児童（19名＋21名）を対象として実施しました。</td>
       </tr>
       <tr>
@@ -134,7 +134,7 @@
          <td><b>活動の様子</b></td>
          <td><b>活動の概要</b></td>
       </tr>
-       <tr>
+     <tr>
          <td>ゲーム設定画面<br><img src="https://tkby.github.io/micra.github.io/ドットで漢字01.jpg" alt="ドットで漢字設定1" width="100%"><br><img src="https://tkby.github.io/micra.github.io/ドットで漢字02.jpg" alt="ドットで漢字設定2" width="100%"></td>
          <td>実際の活動について，機材の設定や資料の説明を挟みながら，１～４の項目に分けて時系列で説明していきます。まず，ホスト機のPCの設定を説明します。<br><b>設定について</b><br><ul>ホスト機のPCにワールドを作成します。<li>推奨設定<ul><li>ワールド:フラット<br>本事例では商店街を作成するのでワールドは何も存在しない平坦な「フラット」に設定しました。（起伏に富んだ地形を利用した町づくりをする際は「無限」に設定）<li>ゲームモード:クリエイティブ<br>建築作業をする場合，空中に浮いて作業ができるクリエイティブにします。<li>難易度:ピース<br>授業に関係のない要素を極力排除するためにはピースが最適です。<li>その他:座標を表示「オン」/火の延焼「オフ」/TNT火薬の爆発「オフ」<br>フラットの世界は目印がありません。迷ってしまう児童が発生することがあります。その場合，座標を教えて戻ってくるよう伝えましょう。せっかく作った町が，一瞬で台無しになってしまわないよう，火の延焼やTNT火薬の爆発は必ずオフにしましょう。<li>その他は指導者のお好みで設定してください。</ul></ul></td>
      </tr>
@@ -143,8 +143,8 @@
            <td>次に，活動に入る前の事前準備について説明します。<br><b>ワールドの事前準備について（ホスト機のPCでの作業）</b><ul><li>商店街の区画の準備<ul><li>制作する店舗のスケール感の把握・商店街エリアの把握のために，商店街の区画は教師サイドで準備しました。<li>児童には町のマップと担当の店舗を伝えました。<li>店舗は10ブロック×10ブロック×10ブロックが基本ということを伝え，制作活動に入りました。</ul><li>店舗モデルの準備<ul><li>教師サイドで商店街の入り口にある1店舗を制作し，店舗制作のベンチマークとしました。</ul></td>
       </tr>
      　<tr>
-       <td>パフォーマンス評価に使用したルーブリック<br><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
-       <td>活動の説明に移ります。<br><b>１　目標提示</b><br><ul>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!<br><li>①目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!」を５月末に設定しました。</ul><li>②ルーブリックによるパフォーマンス評価を実施した意識づけ（5月末～７月中旬）<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
+          <td>パフォーマンス評価に使用したルーブリック<br><img src="https://tkby.github.io/micra.github.io/performance.jpg" alt="ルーブリックによるパフォーマンス評価" width="100%"></td>
+          <td>活動の説明に移ります。<br><b>１　目標提示</b><br><ul>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!<br><li>①目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!」を５月末に設定しました。</ul><li>②ルーブリックによるパフォーマンス評価を実施した意識づけ（5月末～７月中旬）<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
       </tr>
    <tr>
     <td>ホスト機でのマルチプレイ設定コマンド入力</td>
@@ -152,12 +152,12 @@
   </tr>
   <tr>
     <td>児童の制作用iPadでのマルチプレイ接続手順</td>
-    <td>ホスト機のPCにコマンドを打って，マルチプレイ人数が増えましたか？児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方の説明です。<a href = "https://tkby.github.io/micra.github.io/multiset2.html></td>
+    <td>ホスト機のPCにコマンドを打って，マルチプレイ人数が増えましたか？児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方の説明です。<a href = "https://tkby.github.io/micra.github.io/multiset2.html>入り方はこちら</a></td>
   </tr>
   
       <tr>
-       <td>制作と情報収集の様子<br><img src="https://tkby.github.io/micra.github.io/setsuzoku.jpg.jpg" alt="接続確認" width="100%"><br><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
-        <td>ホスト機のPCで作成したワールドに，全台入ることが出来ましたか？次は，制作活動を説明いたします。<br><b>２ 制作活動</b><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>１番はじめの制作活動の時間にペアを組みます。Minecraftの操作や情報収集の仕方等，ペアで学び合いながら活動を進めていきます。<li>１学期の間は制作用iPadは２人に１台配布し，１人が自分の担当店舗を制作し，もう１人がGIGA仕様のiPadで店舗情報を検索してサポートするという活動を15分交代で実施しました。<li>活動が軌道に乗った２学期は，1人１台制作用iPadを配布し，基本的に1人２台（制作用と情報収集用）端末でペアで協力しながら制作活動を行いました。<li>１学期の間は，店舗制作に重きを置きました。児童全員の担当する店舗が完成の目途がたった11月上旬から，<b>３.制作物の評価・改善</b>で説明する「評価・改善の視点」を持たせるための振り返り活動を行いました。</ul></ul></td>
+         <td>制作と情報収集の様子<br><img src="https://tkby.github.io/micra.github.io/setsuzoku.jpg.jpg" alt="接続確認" width="100%"><br><img src="https://tkby.github.io/micra.github.io/sagyou.jpg" alt="作業中の様子" width="100%"></td>
+         <td>ホスト機のPCで作成したワールドに，全台入ることが出来ましたか？次は，制作活動を説明いたします。<br><b>２ 制作活動</b><ul><li>情報の収集と店舗の制作（６月～７月，10月半ば～11月上旬）<ul><li>１番はじめの制作活動の時間にペアを組みます。Minecraftの操作や情報収集の仕方等，ペアで学び合いながら活動を進めていきます。<li>１学期の間は制作用iPadは２人に１台配布し，１人が自分の担当店舗を制作し，もう１人がGIGA仕様のiPadで店舗情報を検索してサポートするという活動を15分交代で実施しました。<li>活動が軌道に乗った２学期は，1人１台制作用iPadを配布し，基本的に1人２台（制作用と情報収集用）端末でペアで協力しながら制作活動を行いました。<li>１学期の間は，店舗制作に重きを置きました。児童全員の担当する店舗が完成の目途がたった11月上旬から，<b>３.制作物の評価・改善</b>で説明する「評価・改善の視点」を持たせるための振り返り活動を行いました。</ul></ul></td>
       </tr>
       <tr>
          <td>６月末の進捗状況（上空から)<br><img src="https://tkby.github.io/micra.github.io/6gatsujoku.jpg" alt="八町大路625" width="100%"></td>
