--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -147,12 +147,12 @@
           <td>活動の説明に移ります。<br><b>１　目標提示</b><br><ul>地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!<br><li>①目標の共有（５月末）<br><ul><li>実施事例は５月末～７月中旬，10月中旬～11月中旬の二期に分けた長期間の活動でした。<li>長期的視点を養うために，活動のゴールを目指す目標「地域の商店街のお店を１人１店舗以上調べてマインクラフトで制作し，いろんな人の考えを参考にして商店街を完成させ，できた商店街をベースに地域の祭りを表現しよう!」を５月末に設定しました。</ul><li>②ルーブリックによるパフォーマンス評価を実施した意識づけ（5月末～７月中旬）<ul><li>児童にゴールを意識させ，長期的な視点を養うために，活動のはじめと振り返りでルーブリックによるパフォーマンス評価を行いました。</ul></ul></td>
       </tr>
    <tr>
-    <td>ホスト機でのマルチプレイ設定コマンド入力</td>
-    <td>ワールドデータを作成しているホスト機側でマルチプレイのコマンドを入力する方法です。<a href = "https://tkby.github.io/micra.github.io/multiset.html>入力方法はこちら</a></td> 
+    <td>ホスト機（PC）でのマルチプレイ設定コマンド入力</td>
+    <td>ホスト機（PC）側でマルチプレイのコマンドを入力する方法です。<a href = "https://tkby.github.io/micra.github.io/multiset.html>入力方法はこちら</a></td> 
   </tr>
   <tr>
     <td>児童の制作用iPadでのマルチプレイ接続手順</td>
-    <td>ホスト機のPCにコマンドを打って，マルチプレイ人数が増えましたか？児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方の説明です。<a href = "https://tkby.github.io/micra.github.io/multiset2.html>入り方はこちら</a></td>
+    <td>児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方の説明です。<a href = "https://tkby.github.io/micra.github.io/multiset2.html>入り方はこちら</a></td>
   </tr>
   
       <tr>
