--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -148,11 +148,11 @@
       </tr>
    <tr>
     <td>ホスト機（PC）でのマルチプレイ設定コマンド入力</td>
-    <td>ホスト機（PC）側でマルチプレイのコマンドを入力する方法です。<a href = "https://tkby.github.io/micra.github.io/multiset.html>入力方法はこちら</a></td> 
+    <td>ホスト機（PC）側でマルチプレイのコマンドを入力する方法です。<a href = "https://tkby.github.io/micra.github.io/multiset.html">入力方法はこちら</a></td> 
   </tr>
   <tr>
     <td>児童の制作用iPadでのマルチプレイ接続手順</td>
-    <td>児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方の説明です。<a href = "https://tkby.github.io/micra.github.io/multiset2.html>入り方はこちら</a></td>
+    <td>児童の制作用iPadでホスト機のPCで制作したワールドに入る入り方の説明です。<a href = "https://tkby.github.io/micra.github.io/multiset2.html">入り方はこちら</a></td>
   </tr>
   
       <tr>
