--- a/multiset.html
+++ b/multiset.html
@@ -30,10 +30,9 @@
   
      <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
-             <th width="15%"><b>時期</b></th>
-             <th width="30%"><b>活動</b></th>
-             <th width="55%"><b>詳細について</b></th>
-           </tr>
+             <th width="50%"><b>概要</b></th>
+             <th width="50%"><b>詳細/b></th>
+                </tr>
      
    <tr>
     <td>ホスト機でのマルチプレイ（25人)設定コマンド入力画面<br><img src="https://tkby.github.io/micra.github.io/players25.jpg" alt="プレイヤー25人" width="100%"></td>
