--- a/multiset2.html
+++ b/multiset2.html
@@ -30,9 +30,9 @@
   
      <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
-             <th width="15%"><b>時期</b></th>
-             <th width="30%"><b>活動</b></th>
-             <th width="55%"><b>詳細について</b></th>
+             <th width="50%"><b>概要</b></th>
+             <th width="50%"><b>詳細</b></th>
+            
            </tr>
       
   <tr>
