--- a/multiset2.html
+++ b/multiset2.html
@@ -49,7 +49,7 @@
     </body>
    <footer>
 <nav>
-<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/Shotengainew.html'">もどる</button>
 </nav>
 <small>© 2021 Created by Yoshinori Takebayashi</small>
    </footer>
