--- a/Settei.html
+++ b/Settei.html
@@ -47,7 +47,7 @@
     </body>
    <footer>
 <nav>
-<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/Settei.html'">もどる</button>
 </nav>
 <small>© 2021 Created by Yoshinori Takebayashi</small>
    </footer>
