--- a/56joche.html
+++ b/56joche.html
@@ -1,1 +1,52 @@
+<!DOCTYPE html>
+ <html>
+ <head>
+     <meta charset="utf-8">
+  <!--6/19viewport仮設定-->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Minecraftで教科横断型の問題解決学習</title>
+   <link rel="stylesheet" href="subject.css" type="text/css">
+ <!--レスポンシブデザイン-->
+ 
+<style type="text/css">
+ img{
+  text-align:center;
+</style>
+   </head>
+ <body>
+   
+ <ul class="box-list" style="list-style:none;">
+  <li>
+   <h1>(1)情報活用能力チェックリストの結果より（5,6)年</h1>
+   <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+           <tr align="center">
+             <th width="5%"><b>設問</b></th>
+             <th width="10%"><b>分類</b></th>
+              <th width="15%"><b>内容</b></th>         
+             <th width="10%"><b>学年</b></th>
+              <th width="10%"><b>対象人数</b></th>
+            <th width="10%"><b>平均</b></th>
+            <th width="10%"><b>差</b></th>
+            <th width="10%"><b>標準偏差</b></th>
+            <th width="10%"><b>p値</b></th>
+            <th width="10%"><b>効果量d</b></th>
+           
+                </tr>
+  
+  <tr>
+   <td></td>
+   <td></td>
+  </tr>
+     </table>
+    
+    </li>
+ </ul>
 
+    </body>
+   <nav>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
+</nav>
+
+<small>© 2021 Created by Yoshinori Takebayashi</small>
+   
+  </html>
