--- a/kagami.html
+++ b/kagami.html
@@ -98,7 +98,7 @@ img{
                      </ul>
            <h3>Ⅳ-2 結果<a href ="https://tkby.github.io/micra.github.io/micrajoche.html">→</a></h3>
                       <ul>
-                         <li>(1)情報活用」能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">→</a>
+                         <li>(1)情報活用」能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/56joche.html">→</a>
                          <li>(2)商店街と制作物のプロフィールによる振り返りより<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                          <li>(3)児童の記述より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                       </ul>
