--- a/kagami.html
+++ b/kagami.html
@@ -72,7 +72,7 @@ img{
    
              <h3>Ⅳ-1 結果<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
                    <ul>
-                       <li>(1)情報活用能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/johokatsuyocheck.html">→</a>
+                       <li>(1)情報活用能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/34joche.html">→</a>
                        <li>(2)例題とプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                        <li>(3)応用テストプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                        <li>(4)プログラミングスキルチェックより<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
