--- a/56joche.html
+++ b/56joche.html
@@ -20,27 +20,30 @@
     <h1>①第２回情報活用能力チェックリスト</h1>
         <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
-             <th width="20%"><b>学年</b></th>
-             <th width="20%"><b>人数</b></th>
+             <th width="15%"><b>学年</b></th>
+             <th width="15%"><b>人数（５月）</b></th>
              <th width="20%"><b>第１回平均</b></th>
+             <th width="15%"><b>人数（11月）</b></th>
              <th width="20%"><b>第２回平均</b></th>
-             <th width="20%"><b>伸び</b></th>
+             <th width="15%"><b>伸び</b></th>
            </tr>
          
           <tr>
-           <td>３年</td>
-           <td>16名</td>
-           <td>2.42</td>
-           <td>3.18</td>
-           <td>＋0.76</td>
+           <td>第５学年</td>
+           <td>18名（５月）</td>
+           <td>3.06</td>
+           <td>19名（11月）</d>
+           <td>3.14</td>
+           <td>＋0.08</td>
          </tr>
          
          <tr>
-           <td>４年</td>
-           <td>17名</td>
-           <td>2.91</td>
-           <td>3.08</td>
-           <td>＋0.17</td>
+           <td>第６学年</td>
+           <td>20名（５月）</td>
+           <td>2.76</td>
+           <td>21名（11月）</td>
+           <td>3.00</td>
+           <td>＋0.24</td>
          </tr>
      </table>
    <h1>(1)情報活用能力チェックリストの結果より（5,6)年</h1>
