--- a/34joche.html
+++ b/34joche.html
@@ -17,6 +17,32 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
+    <h1>①第２回情報活用能力チェックリスト</h1>
+        <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+           <tr align="center">
+             <th width="15%"><b>学年</b></th>
+             <th width="15%"><b>人数</b></th>
+             <th width="20%"><b>第１回平均</b></th>
+             <th width="20%"><b>第２回平均</b></th>
+             <th width="15%"><b>伸び</b></th>
+           </tr>
+         
+          <tr>
+           <td>第３学年</td>
+           <td>16名</td>
+           <td>2.42</td>
+           <td>3.18</td>
+           <td>＋0.76</td>
+         </tr>
+         
+         <tr>
+           <td>第４学年</td>
+           <td>17名</td>
+           <td>2.91</td>
+           <td>3.08</td>
+           <td>＋0.17</td>
+         </tr>
+     </table>
    <h1>(1)情報活用能力チェックリストの結果より（3,4)年</h1>
    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
