--- a/56joche.html
+++ b/56joche.html
@@ -112,7 +112,7 @@
    </tr>
   </table>
        
-    <h1>①第２回情報活用能力チェックリスト</h1>
+    <h2>①第２回情報活用能力チェックリスト(設問15～35：第５，６学年）</h2>
         <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="15%"><b>学年</b></th>
