--- a/34joche.html
+++ b/34joche.html
@@ -138,7 +138,7 @@
            <td>＋0.17</td>
          </tr>
      </table>
-   <h1>(1)情報活用能力チェックリストの結果より（3,4)年</h1>
+   <h2>(1)情報活用能力チェックリストの結果より（設問15,25,33,35:3,4)年</h2>
    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
           
