--- a/56joche.html
+++ b/56joche.html
@@ -141,7 +141,7 @@
            <td>＋0.24</td>
          </tr>
      </table>
-   <h1>(1)情報活用能力チェックリストの結果より（5,6)年</h1>
+   <h2>(1)情報活用能力チェックリストの結果より（設問15,22,33,35:第5,6学年）</h2>
    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="5%"><b>設問</b></th>
