--- a/Shotengainew.html
+++ b/Shotengainew.html
@@ -153,7 +153,7 @@
          
       <tr>
          <td>ゲーム設定画面について</td>
-         <td>ホスト機のPCの設定を説明します。<a href="https://tkby.github.io/micra.github.io/Settei.html>ホスト機PCの設定について</a></td>
+         <td>ホスト機のPCの設定を説明します。<a href="https://tkby.github.io/micra.github.io/Settei.html">ホスト機PCの設定について</a></td>
       </tr>
           
       <tr>
