--- a/matome.html
+++ b/matome.html
@@ -19,6 +19,14 @@
      <li>
         <h1>Ⅵ　研究のまとめ</h1>
          <ul><li>１　成果
+                 <ul><li>振り返りを工夫したICT活用を全学年で行い，自ら評価・改善をして適切な情報活用ができる児童を育成できた。
+      　　　　　     <li>評価・改善する力がつくことで，試行錯誤しながら制作物を練り上げ，質を高める姿・質の高い作品が増えた。
+                 　  <li>第１～４学年でのプログラミング活動では，小学校の様々な学年・教科・領域で「評価・改善する『情報活用能力』」を育成できる可能性を証明できた。
+                     <li>第５，６学年での地域の祭りをできたるで表現する活動では，SD法を用いた振り返りを通して制作物の評価・改善をさせ，児童が対象に抱くイメージを自分で把握し，他者と比較して類似点・相違点を分析することができた。指標を変えればSD法による振り返りは他教科にも転用ができると考える。
+                     <li>立証していないICT活用の成果を，効果量dを算出し，効果の大きさを数値化して明らかにできた。
+                      <li>「評価・改善する『情報活用能力』」の変容や児童のスキルを明らかにする
+                     
+          
     　       <li>２　課題
          </ul>
     </li>
