--- a/micrakaizen.html
+++ b/micrakaizen.html
@@ -18,6 +18,8 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>SD法によるプロフィールを活用した振り返り</h1>
+    <div><img src="https://tkby.github.io/micra.github.io/imgprofile.jpg" alt="プロフィールアンケート" width="90%"></div>
+ 
     <div><img src="https://tkby.github.io/micra.github.io/nichijo.jpg" alt="日常の商店街" width="90%"></div>
    <div><img src="https://tkby.github.io/micra.github.io/3dhaccho.jpg" alt="マイクラで作った商店街" width="90%"></div>
    <p>10月半ばの時点までの商店街の町並みについて，SD法によるアンケート（第５学年19名，第６学年21名，教員13名）でプロフィールを作成し，それぞれの結果を比較しました。教員によるプロフィールは「児童よりも商店街に詳しい『大人のプロフィール』」として扱いました。</p>
