--- a/34joche.html
+++ b/34joche.html
@@ -113,6 +113,7 @@
   </table>
        
     <h2>①第２回情報活用能力チェックリスト（設問15～35:第３，４学年）</h2>
+   <p>第３，４学年ともに，５月に比べ，設問15～35の「問題解決・探究における情報活用」の平均スコアは上昇した。</p>
         <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
              <th width="15%"><b>学年</b></th>
@@ -139,6 +140,10 @@
          </tr>
      </table>
    <h2>(1)情報活用能力チェックリストの結果より（設問15,25,33,35:第３，４学年）</h2>
+        <ul>
+          <li>収集力（設問15）と整理力・比較力・分析力（設問25）で有意差有り(p<o.05)且つ効果有り(d>=0.40)
+          <li>計画力（設問33）と表現力・伝達力（設問35）で効果有り（d>=0.40)
+       </ul>
    <table border="1"cellspacing="0" bordercolor="#333" width="100%">
            <tr align="center">
           
