--- a/kagami.html
+++ b/kagami.html
@@ -92,7 +92,7 @@ img{
                         <li>(2)検証授業（第１回～３回）<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                         <li>(3)検証方法<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                            <ul>
-                              <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                              <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→</a>
                               <li>②授業観察・制作物・記述<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                            </ul>
                      </ul>
