--- a/kagami.html
+++ b/kagami.html
@@ -88,7 +88,7 @@ img{
            <h3>Ⅲ-2 地域の祭りをデジタルで表現する活動について</h3>
            <p>活動の概要説明<a href="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></p>
                      <ul>
-                        <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                        <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/micrajittaichosa.html">→</a>
                         <li>(2)検証授業（第１回～３回）<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                         <li>(3)検証方法<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
                            <ul>
