--- a/micrakenshohoho.html
+++ b/micrakenshohoho.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+ <html>
+ <head>
+     <meta charset="utf-8">
+  <!--6/19viewport仮設定-->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Minecraftで教科横断型の問題解決学習</title>
+   <link rel="stylesheet" href="subject.css" type="text/css">
+ <!--レスポンシブデザイン-->
+ 
+<style type="text/css">
+ img{
+  text-align:center;
+</style>
+   </head>
+ <body>
+   
+ <ul class="box-list" style="list-style:none;">
+  <li>
+   <h1>(３)検証方法</h1>
+   <table border="1"cellspacing="0" bordercolor="#333" width="100%">
+           <tr align="center">
+             <th width="50%"><b>検証方法</b></th>
+             <th width="50%"><b>内容</b></th>
+                </tr>
+  
+              <tr>
+                <td>①第２回情報活用能力チェックリスト</td>
+                <td>第１回の結果と比較し，変容を量的に見取った</td>
+              </tr>
+     
+              <tr>
+                <td>②授業観察・制作物・記述</td>
+                <td>授業観察・制作物・記述から，児童の「評価・改善する『情報活用能力』」の変容を量的に見取った。</td>
+              </tr>
+     </table>
+    
+    </li>
+ </ul>
 
+    </body>
+   <nav>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
+</nav>
+
+<small>© 2021 Created by Yoshinori Takebayashi</small>
+   
+  </html>
