--- a/micrakenshohoho.html
+++ b/micrakenshohoho.html
@@ -31,7 +31,7 @@
      
               <tr>
                 <td>②授業観察・制作物・記述</td>
-                <td>授業観察・制作物・記述から，児童の「評価・改善する『情報活用能力』」の変容を量的に見取った。</td>
+                <td>授業観察・制作物・記述から，児童の「評価・改善する『情報活用能力』」の変容を質的に見取った。</td>
               </tr>
      </table>
     
