--- a/micrakensho.html
+++ b/micrakensho.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+ <html>
+ <head>
+     <meta charset="utf-8">
+  <!--6/19viewport仮設定-->
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Minecraftで教科横断型の問題解決学習</title>
+   <link rel="stylesheet" href="subject.css" type="text/css">
+ <!--レスポンシブデザイン-->
+ 
+<style type="text/css">
+ img{
+  text-align:center;
+</style>
+   </head>
+ <body>
+   
+ <ul class="box-list" style="list-style:none;">
+  <li>
+   <h1>(２)検証授業</h1>
+    <p>振り返り</p>
+   <div><img src="https://tkby.github.io/micra.github.io/micrafurikaeri.jpg" alt="マイクラ振り返りパターン" width="90%"></div>
+  
+     
+           </tr>
+  </li>
+ </ul>
 
+    </body>
+   <nav>
+<button type="button" onclick="location.href='https://tkby.github.io/micra.github.io/kagami.html'">トップへ</button>
+</nav>
+
+<small>© 2021 Created by Yoshinori Takebayashi</small>
+   
+  </html>
