--- a/kagami.html
+++ b/kagami.html
@@ -59,7 +59,7 @@ img{
    <p>活動の概要説明<a href="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></p>
                   <ul>
                       <li>(1)実態調査１・２の対象と期間
-                      <li>(2)検証授業(第１回～４回）
+                      <li>(2)検証授業(第１回～４回）<a href ="https://tkby.github.io/micra.github.io/prograkensho.html">→</a>
                       <li>(3)検証方法
                          <ul>
                              <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→</a>
@@ -89,7 +89,7 @@ img{
            <p>活動の概要説明<a href="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></p>
                      <ul>
                         <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/micrajittaichosa.html">→</a>
-                        <li>(2)検証授業（第１回～３回）<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                        <li>(2)検証授業（第１回～３回）<a href ="https://tkby.github.io/micra.github.io/micrakensho.html">→</a>
                         <li>(3)検証方法<a href ="https://tkby.github.io/micra.github.io/micrakenshohoho.html">→</a>
                            <ul>
                               <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→</a>
