--- a/kagami.html
+++ b/kagami.html
@@ -58,7 +58,7 @@ img{
              <h3>Ⅲ-1 プログラミング活動について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
    <p>活動の概要説明<a href="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></p>
                   <ul>
-                      <li>(1)実態調査１・２の対象と期間
+                      <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/progr.html">→</a>
                       <li>(2)検証授業(第１回～４回）<a href ="https://tkby.github.io/micra.github.io/prograkensho.html">→</a>
                       <li>(3)検証方法
                          <ul>
