--- a/kagami.html
+++ b/kagami.html
@@ -55,35 +55,35 @@ img{
                             </ul>
              <h3>Ⅱ　仮説<a href ="https://tkby.github.io/micra.github.io/kasetsu.html">→</a></h3>
              <h3>Ⅲ　研究の方法と内容</h3>
-             <h3>Ⅲ-1 プログラミング活動について<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
-   <p>活動の概要説明<a href="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></p>
+             <h3>Ⅲ-1 プログラミング活動について</h3>
+   <p>活動の概要説明</a></p>
                   <ul>
-                      <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/progr.html">→</a>
+                      <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/prograjittaichosa.html">→</a>
                       <li>(2)検証授業(第１回～４回）<a href ="https://tkby.github.io/micra.github.io/prograkensho.html">→</a>
                       <li>(3)検証方法
                          <ul>
                              <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→</a>
-                             <li>②例題プログラム<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                             <li>③応用テスト<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                             <li>④プログラミングスキルチェック<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                             <li>⑤授業観察・制作物<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                             <li>②例題プログラム
+                             <li>③応用テスト
+                             <li>④プログラミングスキルチェック
+                             <li>⑤授業観察・制作物
                          </ul>
                   </ul>
    
-             <h3>Ⅳ-1 結果<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></h3>
+             <h3>Ⅳ-1 結果</h3>
                    <ul>
                        <li>(1)情報活用能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/34joche.html">→</a>
-                       <li>(2)例題とプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                       <li>(3)応用テストプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                       <li>(4)プログラミングスキルチェックより<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                       <li>(5)授業観察・制作物より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                       <li>(2)例題とプログラム完成率より
+                       <li>(3)応用テストプログラム完成率より
+                       <li>(4)プログラミングスキルチェックより
+                       <li>(5)授業観察・制作物より
                    </ul>
    </li>
    <li>
              <h3>Ⅴ-1　考察<a href ="https://tkby.github.io/micra.github.io/prograkosatsu.html">→</a></h3>
                      <ul>
                         <li>(1)「評価・改善する『情報活用能力』」のたかまり<a href ="https://tkby.github.io/micra.github.io.html">→</a>
-                        <li>(2)「随時振り返り」と「総括振り返り」の違い<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                        <li>(2)「随時振り返り」と「総括振り返り」の違い
            　　　　　 </ul>
            <h3>Ⅲ-2 地域の祭りをデジタルで表現する活動について</h3>
            <p>活動の概要説明<a href="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a></p>
@@ -93,14 +93,14 @@ img{
                         <li>(3)検証方法<a href ="https://tkby.github.io/micra.github.io/micrakenshohoho.html">→</a>
                            <ul>
                               <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→</a>
-                              <li>②授業観察・制作物・記述<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                              <li>②授業観察・制作物・記述
                            </ul>
                      </ul>
            <h3>Ⅳ-2 結果<a href ="https://tkby.github.io/micra.github.io/micrajoche.html">→</a></h3>
                       <ul>
                          <li>(1)情報活用」能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/56joche.html">→</a>
-                         <li>(2)商店街と制作物のプロフィールによる振り返りより<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
-                         <li>(3)児童の記述より<a href ="https://tkby.github.io/micra.github.io/Shotengainew.html">→</a>
+                         <li>(2)商店街と制作物のプロフィールによる振り返りより
+                         <li>(3)児童の記述より
                       </ul>
            <h3>Ⅴ-2 考察<a href ="https://tkby.github.io/micra.github.io/micrakosatsu.html">→</a></h3>
                       <ul>
