--- a/kagami.html
+++ b/kagami.html
@@ -63,8 +63,8 @@ img{
                       <li>(3)検証方法
                          <ul>
                              <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→</a>
-                             <li>②例題プログラム
-                             <li>③応用テスト
+                             <li>②例題プログラム<a href ="https://tkby.github.io/micra.github.io/reidaipgm.html">→</a>
+                             <li>③応用テスト<a href ="https://tkby.github.io/micra.github.io/oyopgm.html">→</a>
                              <li>④プログラミングスキルチェック
                              <li>⑤授業観察・制作物
                          </ul>
