--- a/kagami.html
+++ b/kagami.html
@@ -65,7 +65,7 @@ img{
                              <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→</a>
                              <li>②例題プログラム<a href ="https://tkby.github.io/micra.github.io/reidaipgm.html">→</a>
                              <li>③応用テスト<a href ="https://tkby.github.io/micra.github.io/oyopgm.html">→</a>
-                             <li>④プログラミングスキルチェック
+                             <li>④プログラミングスキルチェック<a href ="https://tkby.github.io/micra.github.io/pgmskill.html">→</a>
                              <li>⑤授業観察・制作物
                          </ul>
                   </ul>
