--- a/pgmskill.html
+++ b/pgmskill.html
@@ -17,8 +17,8 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-   <h1>②例題プログラム</h1>
-    <p></p>
+   <h1>④プログラミングスキルチェック</h1>
+   <="https://tkby.github.io/micra.github.io/pgmskilcheck.html">
     </li>
  </ul>
 
