--- a/pgmskill.html
+++ b/pgmskill.html
@@ -18,7 +18,8 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>④プログラミングスキルチェック</h1>
-   <="https://tkby.github.io/micra.github.io/pgmskilcheck.html">
+    <div><img src="https://tkby.github.io/micra.github.io/pgmskilcheck.jpg" alt="プログラミングスキルチェック" width="90%"></div>
+  
     </li>
  </ul>
 
