--- a/oyowariai.html
+++ b/oyowariai.html
@@ -17,7 +17,7 @@
    
  <ul class="box-list" style="list-style:none;">
   <li>
-   <h1>①応用テストプログラム完成率より</h1>
+   <h1>（３）応用テストプログラム完成率より</h1>
    <div><img src="https://tkby.github.io/micra.github.io/oyoprogram.jpg" alt="応用テストプログラム" width="75%"></div>
    <div><img src="https://tkby.github.io/micra.github.io/oyowariai.jpg" alt="応用テストグラフ" width="75%"></div>
      
