--- a/kagami.html
+++ b/kagami.html
@@ -73,7 +73,7 @@ img{
              <h3>Ⅳ-1 結果</h3>
                    <ul>
                        <li>(1)情報活用能力チェックリストの結果より<a href ="https://tkby.github.io/micra.github.io/34joche.html">→</a>
-                       <li>(2)例題とプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/reidaiwariai.html">→</a>
+                       <li>(2)例題とプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/reidaiwriai.html">→</a>
                        <li>(3)応用テストプログラム完成率より<a href ="https://tkby.github.io/micra.github.io/oyowariai.html">→</a>
                        <li>(4)プログラミングスキルチェックより
                        <li>(5)授業観察・制作物より
