--- a/kagami.html
+++ b/kagami.html
@@ -105,10 +105,11 @@ img{
            <h3>Ⅴ-2 考察</h3>
                       <ul>
                           <li>(1)「評価・改善する『情報活用能力』の高まり<a href ="https://tkby.github.io/micra.github.io/V2kosatsu1.html">→</a>
-                          <li>(2)有効だった振り返り
+                          <li>(2)有効だった振り返り<ul>
                           <li>①パフォーマンス評価による振り返り<a href ="https://tkby.github.io/micra.github.io/performance.html">→</a>
                           <li>②SD法によるプロフィールを活用した振り返り<a href ="https://tkby.github.io/micra.github.io/micrakaizen.html">→</a>
                           <li>③作文による振り返り<a href ="https://tkby.github.io/micra.github.io/micrakosatsu.html">→</a>
+                       </ul>
                       </ul>
            <h3>Ⅵ　まとめ<a href ="https://tkby.github.io/micra.github.io/matome.html">→</a></h3>
                        <ul>
