--- a/pgmskill.html
+++ b/pgmskill.html
@@ -19,6 +19,7 @@
   <li>
    <h1>④プログラミングスキルチェック</h1>
     <div><img src="https://tkby.github.io/micra.github.io/pgmskilcheck.jpg" alt="プログラミングスキルチェック" width="50%"></div>
+   <div><img src="https://tkby.github.io/micra.github.io/pgmskilcheck2.jpg" alt="プログラミングスキルチェック2" width="50%"></div>
   
     </li>
  </ul>
