--- a/pgmskill.html
+++ b/pgmskill.html
@@ -18,8 +18,7 @@
  <ul class="box-list" style="list-style:none;">
   <li>
    <h1>④プログラミングスキルチェック</h1>
-    <div><img src="https://tkby.github.io/micra.github.io/pgmskilcheck.jpg" alt="プログラミングスキルチェック" width="50%"></div>
-   <div><img src="https://tkby.github.io/micra.github.io/pgmskilcheck2.jpg" alt="プログラミングスキルチェック2" width="50%"></div>
+    <img src="https://tkby.github.io/micra.github.io/pgmskilcheck.jpg" alt="プログラミングスキルチェック" width="50%"><br><img src="https://tkby.github.io/micra.github.io/pgmskilcheck2.jpg" alt="プログラミングスキルチェック2" width="50%">
   
     </li>
  </ul>
