--- a/kagami.html
+++ b/kagami.html
@@ -55,7 +55,7 @@ img{
                             </ul>
              <h3>Ⅱ　仮説<a href ="https://tkby.github.io/micra.github.io/kasetsu.html">→</a></h3>
              <h3>Ⅲ　研究の方法と内容</h3>
-             <h3>Ⅲ-1 プログラミング活動について</h3>
+             <h3>Ⅲ-1 プログラミングの学習活動について</h3>
    <p>活動の概要説明</a></p>
                   <ul>
                       <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/prograjittaichosa.html">→</a>
