--- a/kenkyuhaikei.html
+++ b/kenkyuhaikei.html
@@ -252,7 +252,7 @@
   </tr>
   </table>
    
-   <p>問22と問33は，<b>調べたことをデジタルで表現し，改善を重ねていく活動</b>で，問25,問33は，<b>プログラミング活動</b>で育成できると考えました。</p>
+   <p>問22と問33は，<b>調べたことをデジタルで表現し，改善を重ねていく活動</b>で，問25,問33は，<b>プログラミングの学習活動</b>で育成できると考えました。</p>
    
    <p>※下のリンクの論文の最終ページに４４問の情報活用能力チェックリストが添付されています。</p>
     <p><a href="https://www.jstage.jst.go.jp/article/jjet/advpub/0/advpub_45025/_pdf/-char/ja">村上唯斗・野澤博孝・高橋純「情報活用能力指導の実施状況を把握するためのチェックリストの開発と評価」(2021)</a>より引用</p>
