--- a/kagami.html
+++ b/kagami.html
@@ -90,7 +90,7 @@ img{
                      <ul>
                         <li>(1)実態調査１・２の対象と期間<a href ="https://tkby.github.io/micra.github.io/micrajittaichosa.html">→</a>
                         <li>(2)検証授業（第１回～３回）<a href ="https://tkby.github.io/micra.github.io/micrakensho.html">→</a>
-                        <li>(3)検証方法<a href ="https://tkby.github.io/micra.github.io/micrakenshohoho.html">→</a>
+                        <li>(3)検証方法
                            <ul>
                               <li>①第２回情報活用能力チェックリスト<a href ="https://tkby.github.io/micra.github.io/projoche.html">→</a>
                               <li>②授業観察・制作物・記述
